--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "daisyui": "^5.0.3",
+    "drizzle-kit": "^0.30.5",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "tailwindcss": "^4",
+    "tsx": "^4.19.3",
     "typescript": "^5"
   }
 }
